# webrs

./: Cargo.toml  Dockerfile  Makefile  README.md  build.rs  docker-compose.yml  flake.nix  postgres.Dockerfile
src/: body.rs  constants.rs  crypt.rs  db.rs  handler.rs  log.rs  logging.rs  main.rs  template.rs  ws.rs
templates/: index.html  robots.txt  script.js  sitemap.xml  styles.css
