[package]
name = "webrs"
version = "0.1.0"
edition = "2024"

[dependencies]
# tokio for async runtime
tokio = { version = "1", features = ["full"] }

# hyper for HTTP client/server
hyper = { version = "0.14.32", features = ["full"] }

# sailfish for templating
sailfish = "0.9.0"

# tracing for logging
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"

[profile.dev]
opt-level = 0           # Default: no optimization, fast compile for debugging
debug = true            # Include debug info for better debugging
overflow-checks = true  # Enable overflow checks to catch integer overflows

[profile.release]
opt-level = 3           # Max speed optimizations
lto = true              # Link Time Optimization for better global optimization
codegen-units = 1       # Single codegen unit for better optimization (slower compile)
panic = "abort"         # Abort on panic to reduce binary size and improve performance
debug = false           # Strip debug info for smaller binary
overflow-checks = false # Disable overflow checks in release builds for performance
strip = true            # Strip debug symbols to reduce binary size

