[package]
name = "webrs"
version = "0.1.0"
edition = "2024"

[dependencies]
# tokio for async runtime
tokio = { version = "1.46.1", features = ["full"] }

# hyper for HTTP client/server
hyper = { version = "1.6.0", features = ["full"] }
http-body = { version = "1.0.1"}
http-body-util = "0.1.3"
bytes = "1.10.1"
hyper-util = { version = "0.1.15", features = ["full"] }

# websocket
hyper-tungstenite = { version = "0.18.0" }
tokio-tungstenite = { version = "0.27.0"}
futures-util = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
dashmap = "6.1.0"

# sailfish for templating
sailfish = "0.9.1"

# tracing for logging
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-appender = "0.2.3"

# rand and base64 for nonces
rand = { version = "0.9.1", features = ["std"] }
base64 = "0.22.1"

# once_cell for single initialization
once_cell = "1.21.3"

# tokio-postgres for database interaction
tokio-postgres = { version = "0.7.13" }

[profile.dev]
opt-level = 0           # Default: no optimization, fast compile for debugging
debug = true            # Include debug info for better debugging
overflow-checks = true  # Enable overflow checks to catch integer overflows

[profile.release]
opt-level = 3           # Max speed optimizations
lto = true              # Link Time Optimization for better global optimization
codegen-units = 1       # Single codegen unit for better optimization (slower compile)
panic = "abort"         # Abort on panic to reduce binary size and improve performance
debug = false           # Strip debug info for smaller binary
overflow-checks = false # Disable overflow checks in release builds for performance
strip = true            # Strip debug symbols to reduce binary size

